# DeriTradeX

./: .gitignore  CMakeLists.txt  README.md
include/: main.hpp
include/api/: DeribitAPI.hpp
include/models/: Order.hpp  Position.hpp
include/utils/: HttpClient.hpp  JSONUtils.hpp  Logger.hpp
include/ws/: DeriWebSocketServer.hpp  WebSocketServer.hpp
src/: main.cpp
src/api/: DeribitAPI.cpp
src/utils/: HttpClient.cpp  JSONUtils.cpp  Logger.cpp
src/ws/: DeriWebSocketServer.cpp  WebSocketServer.cpp
tests/: test_client.py
